sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:7: error: not found: value insertion
    insertion(ecart)
    ^