sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var n:Int=getNombreValeurs()
  var ecart:Int=n
  while (ecart>0){
    ecart=(ecart.toDouble/2.0).toInt
    insertion(ecart)
  }
  
}

